# ethereal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compileshaders.cmake  ethereal-app.cmake  ethereal-core.cmake  ethereal-engine.cmake  ethereal-render.cmake  ethereal.natvis  shadertoolsconfig.json
include/ethereal/app/: ApplicationBase.h  Camera.h  DeviceManager.h  MediaFileSystem.h  Timer.h  UserInterfaceUtils.h  imgui_console.h  imgui_nvrhi.h  imgui_renderer.h
include/ethereal/core/: circular_buffer.h  json.h  log.h  string_utils.h
include/ethereal/core/chunk/: chunk.h  chunkFile.h
include/ethereal/core/math/: affine.h  basics.h  box.h  color.h  frustum.h  math.h  matrix.h  quat.h  sphere.h  vector.h
include/ethereal/core/vfs/: Compression.h  TarFile.h  VFS.h  WinResFS.h  ZipFile.h
include/ethereal/engine/: AudioCache.h  AudioEngine.h  BindingCache.h  CommonRenderPasses.h  ConsoleInterpreter.h  ConsoleObjects.h  DDSFile.h  DescriptorTableManager.h  FramebufferFactory.h  GltfImporter.h  IesProfile.h  KeyframeAnimation.h  MaterialBindingCache.h  Scene.h  SceneGraph.h  SceneTypes.h  ShaderFactory.h  ShadowMap.h  TextureCache.h  View.h
include/ethereal/render/: BloomPass.h  CascadedShadowMap.h  DeferredLightingPass.h  DepthPass.h  DrawStrategy.h  EnvironmentMapPass.h  ForwardShadingPass.h  GBuffer.h  GBufferFillPass.h  GeometryPasses.h  JointsRenderPass.h  LightProbeProcessingPass.h  MipMapGenPass.h  PixelReadbackPass.h  PlanarShadowMap.h  SkyPass.h  SsaoPass.h  TemporalAntiAliasingPass.h  ToneMappingPasses.h
include/ethereal/shaders/: brdf.hlsli  gbuffer.hlsli  lighting.hlsli  scene_material.hlsli  sky.hlsli  ssao_cb.h
shaders/: CMakeLists.txt  rect_vs.hlsl  sharpen_ps.hlsl  skinning_cs.hlsl
shaders/passes/: bloom_ps.hlsl  cubemap_gs.hlsl  deferred_lighting_cs.hlsl  depth_ps.hlsl  depth_vs.hlsl  environment_map_ps.hlsl  exposure_cs.hlsl  forward_ps.hlsl  forward_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  histogram_cs.hlsl  joints.hlsl  light_probe.hlsl  material_id_ps.hlsl  mipmapgen_cs.hlsl  motion_vectors_ps.hlsl  pixel_readback_cs.hlsl  sky_ps.hlsl  ssao_blur_cs.hlsl  ssao_compute_cs.hlsl  ssao_deinterleave_cs.hlsl  taa_cs.hlsl  tonemapping_ps.hlsl
src/app/: ApplicationBase.cpp  Camera.cpp  DeviceManager.cpp  MediaFileSystem.cpp  UserInterfaceUtils.cpp  imgui_console.cpp  imgui_nvrhi.cpp  imgui_renderer.cpp
src/app/dx11/: DeviceManager_DX11.cpp
src/app/dx12/: DeviceManager_DX12.cpp
src/app/vulkan/: DeviceManager_VK.cpp
src/core/: json.cpp  log.cpp  string_utils.cpp
src/core/chunk/: chunkDescs.h  chunkFile.cpp  chunkReader.cpp  chunkWriter.cpp
src/core/math/: color.cpp  frustum.cpp  matrix.cpp  vector.cpp
src/core/vfs/: Compression.cpp  TarFile.cpp  VFS.cpp  WinResFS.cpp  ZipFile.cpp
src/engine/: AudioCache.cpp  AudioEngine.cpp  BindingCache.cpp  CommonRenderPasses.cpp  ConsoleInterpreter.cpp  ConsoleObjects.cpp  DDSFile.cpp  DescriptorTableManager.cpp  FramebufferFactory.cpp  GltfImporter.cpp  IesProfile.cpp  KeyframeAnimation.cpp  Material.cpp  MaterialBindingCache.cpp  Scene.cpp  SceneGraph.cpp  SceneTypes.cpp  ShaderFactory.cpp  TextureCache.cpp  View.cpp  dds.h
src/render/: BloomPass.cpp  CascadedShadowMap.cpp  DeferredLightingPass.cpp  DepthPass.cpp  DrawStrategy.cpp  EnvironmentMapPass.cpp  ForwardShadingPass.cpp  GBuffer.cpp  GBufferFillPass.cpp  GeometryPasses.cpp  JointsRenderPass.cpp  LightProbeProcessingPass.cpp  MipMapGenPass.cpp  PixelReadbackPass.cpp  PlanarShadowMap.cpp  SkyPass.cpp  SsaoPass.cpp  TemporalAntiAliasingPass.cpp  ToneMappingPasses.cpp
tests/: CMakeLists.txt  test-core.cmake  test-engine.cmake
tests/src/: utils.cpp
tests/src/core/: test_circular_buffer.cpp  test_string_utils.cpp  test_vfs.cpp
tests/src/engine/: test_console_interpreter.cpp  test_console_objects.cpp
